// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> properly renders a checkbox 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  margin-top: 1rem;
  margin-bottom: 1rem;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  line-height: 1.25;
}

.emotion-1 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #FFFFFF;
  border-radius: 3px;
  border: 1px solid #989A9C;
  color: #FFFFFF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 1rem;
  width: 1rem;
}

.emotion-3 {
  font-family: Motiva Sans;
  color: #25272D;
  font-size: 0.875rem;
  line-height: 1.25;
  margin-left: 0.5rem;
}

<label
  className="emotion-0"
>
  <input
    aria-invalid={false}
    checked={false}
    className="emotion-1"
    disabled={false}
    id="example"
    name="example"
    onChange={[Function]}
    type="checkbox"
    value="1"
  />
  <div
    checked={false}
    className="emotion-2"
    disabled={false}
  />
  <span
    className="emotion-3"
    color="text.default"
    fontSize="size4"
  >
    My Checkbox
  </span>
</label>
`;

exports[`<Checkbox /> properly renders a checkbox with an icon 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  margin-top: 1rem;
  margin-bottom: 1rem;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  line-height: 1.25;
}

.emotion-1 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #FFFFFF;
  border-radius: 3px;
  border: 1px solid #989A9C;
  color: #FFFFFF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 1rem;
  width: 1rem;
}

.emotion-3 {
  color: #989A9C;
  font-size: 24px;
  margin-left: 0.5rem;
}

.emotion-4 {
  font-family: Motiva Sans;
  color: #25272D;
  font-size: 0.875rem;
  line-height: 1.25;
  margin-left: 0.25rem;
}

<label
  className="emotion-0"
>
  <input
    aria-invalid={false}
    checked={false}
    className="emotion-1"
    disabled={false}
    id="example"
    name="example"
    onChange={[Function]}
    type="checkbox"
    value="1"
  />
  <div
    checked={false}
    className="emotion-2"
    disabled={false}
  />
  <i
    className="ar ar-cr-logo emotion-3"
    color="icon.default"
    fontSize="24px"
  />
  <span
    className="emotion-4"
    color="text.default"
    fontSize="size4"
  >
    My Checkbox
  </span>
</label>
`;

exports[`<Checkbox /> properly renders a checked and indeterminate checkbox 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  margin-top: 1rem;
  margin-bottom: 1rem;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  line-height: 1.25;
}

.emotion-1 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #FFFFFF;
  border-radius: 3px;
  border: 1px solid #989A9C;
  color: #FFFFFF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 1rem;
  width: 1rem;
  background-color: #FFFFFF;
  border-color: #081D17;
  color: #081D17;
}

.emotion-3 {
  font-size: 16px;
}

.emotion-4 {
  font-family: Motiva Sans;
  color: #25272D;
  font-size: 0.875rem;
  line-height: 1.25;
  margin-left: 0.5rem;
}

<label
  className="emotion-0"
>
  <input
    aria-invalid={false}
    checked={true}
    className="emotion-1"
    disabled={false}
    id="example"
    name="example"
    onChange={[Function]}
    type="checkbox"
    value="1"
  />
  <div
    checked={true}
    className="emotion-2"
    disabled={false}
  >
    <i
      className="ar ar-checkbox-indeterminate emotion-3"
      fontSize="16px"
    />
  </div>
  <span
    className="emotion-4"
    color="text.default"
    fontSize="size4"
  >
    My Checkbox
  </span>
</label>
`;

exports[`<Checkbox /> properly renders a checked checkbox 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  margin-top: 1rem;
  margin-bottom: 1rem;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  line-height: 1.25;
}

.emotion-1 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #FFFFFF;
  border-radius: 3px;
  border: 1px solid #989A9C;
  color: #FFFFFF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 1rem;
  width: 1rem;
  background-color: #081D17;
  border-color: #081D17;
  color: #B6EFD0;
}

.emotion-3 {
  font-size: 16px;
}

.emotion-4 {
  font-family: Motiva Sans;
  color: #25272D;
  font-size: 0.875rem;
  line-height: 1.25;
  margin-left: 0.5rem;
}

<label
  className="emotion-0"
>
  <input
    aria-invalid={false}
    checked={true}
    className="emotion-1"
    disabled={false}
    id="example"
    name="example"
    onChange={[Function]}
    type="checkbox"
    value="1"
  />
  <div
    checked={true}
    className="emotion-2"
    disabled={false}
  >
    <i
      className="ar ar-checkbox-checked emotion-3"
      fontSize="16px"
    />
  </div>
  <span
    className="emotion-4"
    color="text.default"
    fontSize="size4"
  >
    My Checkbox
  </span>
</label>
`;

exports[`<Checkbox /> properly renders a disabled checkbox 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  margin-top: 1rem;
  margin-bottom: 1rem;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  line-height: 1.25;
}

.emotion-1 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #FFFFFF;
  border-radius: 3px;
  border: 1px solid #989A9C;
  color: #FFFFFF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 1rem;
  width: 1rem;
  background: #FFFFFF;
  border-color: #E0E1E2;
  color: #FFFFFF;
  cursor: not-allowed;
}

.emotion-3 {
  font-family: Motiva Sans;
  color: rgba(120,121,125,0.7);
  font-size: 0.875rem;
  line-height: 1.25;
  margin-left: 0.5rem;
}

<label
  className="emotion-0"
>
  <input
    aria-invalid={false}
    checked={false}
    className="emotion-1"
    disabled={true}
    id="example"
    name="example"
    onChange={[Function]}
    type="checkbox"
    value="1"
  />
  <div
    checked={false}
    className="emotion-2"
    disabled={true}
  />
  <span
    className="emotion-3"
    color="text.disabled"
    fontSize="size4"
  >
    My Checkbox
  </span>
</label>
`;

exports[`<Checkbox /> properly renders a disabled indeterminate checkbox 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  margin-top: 1rem;
  margin-bottom: 1rem;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  line-height: 1.25;
}

.emotion-1 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #FFFFFF;
  border-radius: 3px;
  border: 1px solid #989A9C;
  color: #FFFFFF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 1rem;
  width: 1rem;
  background: #FFFFFF;
  border-color: #E0E1E2;
  color: #FFFFFF;
  cursor: not-allowed;
}

.emotion-3 {
  font-size: 16px;
}

.emotion-4 {
  font-family: Motiva Sans;
  color: rgba(120,121,125,0.7);
  font-size: 0.875rem;
  line-height: 1.25;
  margin-left: 0.5rem;
}

<label
  className="emotion-0"
>
  <input
    aria-invalid={false}
    checked={true}
    className="emotion-1"
    disabled={true}
    id="example"
    name="example"
    onChange={[Function]}
    type="checkbox"
    value="1"
  />
  <div
    checked={false}
    className="emotion-2"
    disabled={true}
  >
    <i
      className="ar ar-checkbox-indeterminate emotion-3"
      fontSize="16px"
    />
  </div>
  <span
    className="emotion-4"
    color="text.disabled"
    fontSize="size4"
  >
    My Checkbox
  </span>
</label>
`;

exports[`<Checkbox /> properly renders an indeterminate checkbox 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  margin-top: 1rem;
  margin-bottom: 1rem;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  line-height: 1.25;
}

.emotion-1 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #FFFFFF;
  border-radius: 3px;
  border: 1px solid #989A9C;
  color: #FFFFFF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 1rem;
  width: 1rem;
}

.emotion-3 {
  font-size: 16px;
}

.emotion-4 {
  font-family: Motiva Sans;
  color: #25272D;
  font-size: 0.875rem;
  line-height: 1.25;
  margin-left: 0.5rem;
}

<label
  className="emotion-0"
>
  <input
    aria-invalid={false}
    checked={true}
    className="emotion-1"
    disabled={false}
    id="example"
    name="example"
    onChange={[Function]}
    type="checkbox"
    value="1"
  />
  <div
    checked={false}
    className="emotion-2"
    disabled={false}
  >
    <i
      className="ar ar-checkbox-indeterminate emotion-3"
      fontSize="16px"
    />
  </div>
  <span
    className="emotion-4"
    color="text.default"
    fontSize="size4"
  >
    My Checkbox
  </span>
</label>
`;
